--- a/themes/illuminate/scss/custom/modular/_boxes.scss
+++ b/themes/illuminate/scss/custom/modular/_boxes.scss
@@ -5,7 +5,7 @@
 .columns {
   margin-right: auto;
   margin-left: auto;
-  
+
   .column {
     .bricklayer {
       .bricklayer-column {
@@ -17,17 +17,28 @@
           color: black;
           margin: 2rem 1rem;
           padding: 10px 20px;
-      
+
           blockquote {
             margin-right: 0;
             border-left: 10px solid lightgrey;
-      
+
             p {
               color: #555;
             }
 
-            &+ p {
+            & ~ p:last-child {
               margin-right: 115px;
+
+              @media (max-width: 500px) {
+                margin-right: 0;
+                margin-bottom: 70px;
+              }
+            }
+          }
+
+          .button {
+            @media (max-width: 500px) {
+              margin-bottom: 50px;
             }
           }
         }
